2011-02-04  Emilio Meschi <emilio.meschi@cern.ch>
	
	* tag V00-19-07
	* increased max endpaths to 20 in trs

2011-02-04  Emilio Meschi <emilio.meschi@cern.ch>
	
	* tag V00-19-06
	* rate stat gathering
	
2011-02-03  Emilio Meschi <emilio.meschi@cern.ch>
	
	* tag V00-19-05
	* fix bug in ParameterSetRetriever

2011-01-19  Emilio Meschi <emilio.meschi@cern.ch>
	
	* tag V00-19-04
	* added support for path indices 

2011-01-19  Emilio Meschi <emilio.meschi@cern.ch>
	
	* tag V00-19-03
	* 18-06 migrate to xml buildfile
	* 19-00 macosx compat
	* 19-01 64-bit fix
	* 19-02 remove compile flags
	* 19-03 add support for rate counting 
	*       microstate collection in iDie
	*       various updates
	
2010-10-07  Emilio Meschi <emilio.meschi@cern.ch>
	
	* tag V00-18-06
	* minor improvements to various plugins (excGen etc.)

2010-10-07  Emilio Meschi <emilio.meschi@cern.ch>
	
	* tag V00-18-05
	* addjustments by Elmer

2010-06-02  Emilio Meschi <emilio.meschi@cern.ch>
	
	* tag V00-18-04
	* new features of edmConfigFromDB script
	(as per Philipp's info)


2010-05-17  Emilio Meschi <emilio.meschi@cern.ch>
	
	* tag V00-18-03
	* improve exception messages when rcv fails
	* add missing initialization to some quantities in process reg struct
	
2010-04-28  Emilio Meschi <emilio.meschi@cern.ch>
	
	* tag V00-18-02 (01 used by Bill)
	* add InputTag to both EvFXXX in plugins
	
2010-04-26  Emilio Meschi <emilio.meschi@cern.ch>
	
	* tag V00-18-00
	* addition of modules to insert evf pseudo-fed info
	and to select particular feds - and their cfi files
	* removed all getByType 

2010-04-13  Emilio Meschi <emilio.meschi@cern.ch>
	
	* tag V00-17-18
	* put back fix by Bill to remove compilation warning

2010-04-13  Emilio Meschi <emilio.meschi@cern.ch>

	* tag V00-17-17
	* moved some msgq-related classes here for common use 
	* reworked Vulture interface 
	
2010-03-25  Emilio Meschi <emilio.meschi@cern.ch>

	* tag V00-17-14
	* add timestamp setting to errorstreamsource
