@@ -1,3 +1,10 @@
+2011-03-21  Emilio Meschi <emilio.meschi@cern.ch>
+	
+	* tag V00-19-08
+	* some cleanup of TriggerReportDef and work on improving cpu and 
+	rate stat
+	* minor addition to Css.h for SMProxyServer
+
 2011-02-04  Emilio Meschi <emilio.meschi@cern.ch>
 	
 	* tag V00-19-07
